refactor: weather command refactoring which includes more features